<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/final_gradient_top_blue"
    tools:context="ui.sync.SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/white"
        style="@style/text_link_m"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/second_fragment"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_second_dos"
        style="@style/text_link_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/white"
        android:text="@string/second_fragment_dos"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/textview_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />

    <TextView
        android:id="@+id/textview_second_tres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_link_m"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/second_fragment_tres"
        app:layout_constraintBottom_toTopOf="@id/textview_second_dos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />
</androidx.constraintlayout.widget.ConstraintLayout>